best-practices/restrict-service-external-ips/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: restrict-service-external-ips
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../restrict-service-external-ips.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: restrict-external-ips
          spec:
            validationFailureAction: Enforce
    - assert:
        file: chainsaw-step-01-assert-1.yaml
  - name: step-02
    try:
    - apply:
        file: good-services.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-service-oneip.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-service-twoeip.yaml
